# cobotta_pro_cell

cobotta_cell_description/: CMakeLists.txt  README.md  package.xml  upstream.repos
cobotta_cell_description/config/: display.rviz  initial_positions.yaml
cobotta_cell_description/launch/: display.launch.py
cobotta_cell_description/urdf/: cobotta_cell.urdf.xacro  cobotta_cell_gen.urdf.xacro
cobotta_cell_moveit_config_pkg/: .setup_assistant  CMakeLists.txt  README.md  package.xml
cobotta_cell_moveit_config_pkg/config/: cobotta_cell.ros2_control.xacro  cobotta_cell.srdf  cobotta_cell.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
cobotta_cell_moveit_config_pkg/launch/: cvrb0609_driver.launch.py  demo.launch.py  machine.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
cobotta_pro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cobotta_pro_moveit_config/config/: cobotta_cell.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
cobotta_pro_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
cvrb0609_description/: package.xml
kiwi_cell_description/: CMakeLists.txt
pneumatic_disassembly_unit_description/: CMakeLists.txt  package.xml
schunk_egp64_c_description/: CMakeLists.txt  package.xml
schunk_egp64_c_description/meshes/: finger_1_link.STL  finger_2_link.STL  housing_link.STL
schunk_egp64_c_description/urdf/: example_schunk_egp64_c.urdf.xacro  schunk_egp64_c.urdf.xacro
(+34 files in other folders)
