<package format="3">
  <name>cobotta_cell_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for cobotta_cell</p>
    <p>This package contains configuration data, 3D models and launch files for cobotta_cell robot</p>
  </description>
  <author>TODO</author>
  <maintainer email='todo@todo.com' />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>kiwi_cell_description</depend>
  <depend>schunk_egp64_c_description</depend>
  <depend>pneumatic_disassembly_unit_description</depend>
  <depend>denso_robot_descriptions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
